# accomplishment_generation

./: DONE.md  GEMINI.md  integration_test.py  main.py  pyproject.toml  test_cancel.py  test_main.py
data_ingest/: extractor.py
data_ingest/site_A/: extractor.py
model/: db.py  request.py
prompt/: DONE.md  Question.md  TO_DO.md  feature.md  project_overview.md
